# demo-python-finance

./: .env  README.md  main.py  pyproject.toml  requirements.txt
finance/: finance.py
